write swagger for booking
